moved sidenav and header as seperate component

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,7 @@ mat-sidenav{
     width: 250px;
 }
 
-a{
+/* a{
     text-decoration: none;
     color: white;
 }
@@ -24,4 +24,4 @@ a:hover,a:active{
 .nav-caption{
     display: inline-block;
     padding-left: 6px;
-}
+} */
