--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container>
+<!-- <mat-sidenav-container>
     <mat-sidenav #sidenav role="navigation">
         <mat-nav-list>
             <a mat-list-item routerLink="/" (click)="sidenav.close()">
@@ -26,5 +26,21 @@
         </main>
     </mat-sidenav-content>
 </mat-sidenav-container>
+ -->
 
 
+ <mat-sidenav-container>
+    <mat-sidenav #sidenav role="navigation">
+        <app-sidenav-list (closeSidenav)="sidenav.close()"></app-sidenav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <app-header (sidenavToggle)="sidenav.toggle()"></app-header>
+        <main>
+            <router-outlet></router-outlet>
+        </main>
+    </mat-sidenav-content>
+</mat-sidenav-container>
+
+
+
+ 
