Header components moved seperately

--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -1,1 +1,18 @@
-<p>header works!</p>
+<mat-toolbar color="primary">
+    <div fxHide.gt-xs>
+        <button mat-icon-button (click)="ontoggleSidenav()">
+            <mat-icon>menu</mat-icon>
+        </button>                
+    </div>
+    <div>
+        <a routerLink="/">
+            <span class="header-caption">Cheat Sheet</span>
+        </a>
+    </div>
+                 
+    <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
+        <ul fxLayout fxLayoutGap="10px" class="navigation-items">
+            <li><a routerLink="/">Home</a></li>
+        </ul>                
+    </div>
+</mat-toolbar>
