--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,1 +1,5 @@
-<p>sidenav-list works!</p>
+<mat-nav-list>
+    <a mat-list-item routerLink="/" (click)="onclose()">
+        <mat-icon>home</mat-icon>
+        <span class="nav-caption">Home</span></a>
+</mat-nav-list>
