--- a/src/app/blog/entry-list/entry-list.component.html
+++ b/src/app/blog/entry-list/entry-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
 
   
   <div class="entry-list">
@@ -8,5 +8,28 @@
         <a routerLink="/{{ entry.slug }}">{{ entry.title }}</a>
       </li>
     </ul>
+  </div>
+</div> -->
+
+<!-- <section class="cheatsheet" fxLayout fxLayoutAlign="center">
+  <div *ngFor="let entry of entries">
+    <mat-card fxFlex="400px">
+      <a routerLink="/{{ entry.slug }}">{{ entry.title }}</a>
+    </mat-card>
+  </div>
+</section> -->
+
+<div class="content">
+  <div fxLayout="row wrap" fxLayoutGap="16px grid">
+    <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let entry of entries">
+      <mat-card class="mat-elevation-z4">
+        <img mat-card-image src="#">
+        <mat-card-content>
+          <p>
+            <a routerLink="/{{ entry.slug }}">{{ entry.title }}</a>
+          </p>
+        </mat-card-content>
+      </mat-card>
+    </div>
   </div>
 </div>
