--- a/src/app/blog/entry-list/entry-list.component.css
+++ b/src/app/blog/entry-list/entry-list.component.css
@@ -5,3 +5,14 @@
 .content > mat-card {
     width: 200px;
 }
+
+img{
+    object-fit: cover; /*this makes the image in src fit to the size specified below*/
+    /* width: 200px;*/
+    height: 200px;
+  }
+
+  mat-card-content{
+    display:flex;
+    justify-content: center;
+  }
