--- a/src/app/blog/entry-list/entry-list.component.html
+++ b/src/app/blog/entry-list/entry-list.component.html
@@ -23,11 +23,11 @@
   <div fxLayout="row wrap" fxLayoutGap="16px grid">
     <div fxFlex="25%" fxFlex.xs="100%" fxFlex.sm="33%" *ngFor="let entry of entries">
       <mat-card class="mat-elevation-z4">
-        <img mat-card-image src="#">
+        <img mat-card-image src="{{ entry.image }}">
         <mat-card-content>
-          <p>
+          <h3>
             <a routerLink="/{{ entry.slug }}">{{ entry.title }}</a>
-          </p>
+          </h3>
         </mat-card-content>
       </mat-card>
     </div>
