Added github link to fork

--- a/src/app/navigation/header/header.component.css
+++ b/src/app/navigation/header/header.component.css
@@ -17,3 +17,8 @@ a:hover,a:active{
     display: inline-block;
     padding-left: 6px;
 }
+
+.github{
+    padding-left: 6px;
+    cursor: pointer;
+}
