--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -2,4 +2,7 @@
     <a mat-list-item routerLink="/" (click)="onclose()">
         <mat-icon>home</mat-icon>
         <span class="nav-caption">Home</span></a>
+    <a mat-list-item (click)="github()">
+        <i class="fa fa-github fa-2x" ></i>&nbsp;Github
+    </a>
 </mat-nav-list>
