--- a/src/app/blog/post/post.component.html
+++ b/src/app/blog/post/post.component.html
@@ -1,5 +1,13 @@
-<div class="markdown-post">
+<!-- <div class="markdown-post">
     <ng-container *ngIf="post$ | async as post">
       <div id="markdown-post" markdown [src]="post"></div>
     </ng-container>
+  </div> -->
+
+  <div class="container">
+    <div class="markdown-post">
+      <ng-container *ngIf="post$ | async as post">
+        <div id="markdown-post" markdown [src]="post"></div>
+      </ng-container>
+    </div>
   </div>
